@@ -1,5 +1,4 @@
 -Xmx2g
 -Xms1g
 -XX:+UseZGC
--XX:+ZGenerational
 -XX:ReservedCodeCacheSize=512m
